--- a/location_sigma_spindles.ipynb
+++ b/location_sigma_spindles.ipynb
@@ -10,10 +10,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Imports\n",
+    "import numpy as np\n",
+    "import torch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# loading data\n",
+    "test_marks = np.load('data_sigma_spindles/test_marks.npy')\n",
+    "test_signals = np.load('data_sigma_spindles/test_signals.npy')\n",
+    "train_marks = np.load('data_sigma_spindles/train_marks.npy')\n",
+    "train_signals = np.load('data_sigma_spindles/train_signals.npy')\n",
+    "val_marks = np.load('data_sigma_spindles/val_marks.npy')\n",
+    "val_signals = np.load('data_sigma_spindles/val_signals.npy')"
+   ]
   }
  ],
  "metadata": {
@@ -23,7 +42,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.3"
   },
   "orig_nbformat": 4,
