--- a/location_sigma_spindles.ipynb
+++ b/location_sigma_spindles.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,46 +36,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_marks = np.load('data_sigma_spindles/test_marks.npy')\n",
-    "test_signals = np.load('data_sigma_spindles/test_signals.npy')\n",
-    "train_marks = np.load('data_sigma_spindles/train_marks.npy')\n",
-    "train_signals = np.load('data_sigma_spindles/train_signals.npy')\n",
-    "val_marks = np.load('data_sigma_spindles/val_marks.npy')\n",
-    "val_signals = np.load('data_sigma_spindles/val_signals.npy')"
+    "test_marks = torch.tensor(np.load('data_sigma_spindles/test_marks.npy'))\n",
+    "test_signals = torch.tensor(np.load('data_sigma_spindles/test_signals.npy'))\n",
+    "train_marks = torch.tensor(np.load('data_sigma_spindles/train_marks.npy'))\n",
+    "train_signals = torch.tensor(np.load('data_sigma_spindles/train_signals.npy'))\n",
+    "val_marks = torch.tensor(np.load('data_sigma_spindles/val_marks.npy'))\n",
+    "val_signals = torch.tensor(np.load('data_sigma_spindles/val_signals.npy'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 10.392403   10.438517    8.462609  ...  12.344748   13.411556\n",
-      "   14.135004 ]\n",
-      " [ 14.703606   13.90091    13.863918  ... -20.174028  -13.685317\n",
-      "   -5.3524094]\n",
-      " [  3.3690853   4.5688105   4.298267  ...   6.5689297  10.159964\n",
-      "   13.481306 ]\n",
-      " ...\n",
-      " [ -0.7367863  -0.3479012  -0.2699001 ...  -2.8372936   0.0796485\n",
-      "    3.4275143]\n",
-      " [-20.764774  -19.81314   -18.676691  ...  -9.514902   -9.194244\n",
-      "   -7.50603  ]\n",
-      " [-10.778502  -13.544404  -17.042303  ...   4.280254    2.9550369\n",
-      "    1.9178629]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#print(train_marks)\n",
-    "print (train_signals)"
+    "train_ds = torch.utils.data.TensorDataset(train_signals, train_marks)\n",
+    "val_ds = torch.utils.data.TensorDataset(val_signals, val_marks)\n",
+    "test_ds = torch.utils.data.TensorDataset(test_signals, test_marks)"
    ]
   },
   {
@@ -101,7 +89,7 @@
     "        self.conv_blocks = nn.Sequential(\n",
     "\n",
     "          \n",
-    "            nn.Conv2d(64,10,kernel_size=1,padding=\"same\"),\n",
+    "            nn.Conv2d(800,2,kernel_size=1,padding=\"same\"),\n",
     "            nn.AvgPool2d(3),\n",
     "            nn.Flatten(),\n",
     "        )\n",
@@ -190,7 +178,22 @@
     "    val_loss = cumulative_loss / len(val_loader)\n",
     "\n",
     "    return val_acc, val_loss\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def train_model(\n",
     "    model,\n",
     "    train_dataset,\n",
@@ -255,8 +258,10 @@
     "        train_loss_count = 0\n",
     "        train_acc_count = 0\n",
     "\n",
+    "\n",
     "        # Entrenamiento del modelo\n",
     "        model.train()\n",
+    "\n",
     "        for i, (x_batch, y_batch) in enumerate(train_loader):\n",
     "            if use_gpu:\n",
     "                x_batch = x_batch.cuda()\n",
