--- a/location_sigma_spindles.ipynb
+++ b/location_sigma_spindles.ipynb
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "## Training set up"
    ]
   },
   {
@@ -232,9 +232,7 @@
     "def train_model(\n",
     "    model,\n",
     "    train_dataset,\n",
-    "    train_res,\n",
     "    val_dataset,\n",
-    "    val_res,\n",
     "    epochs,\n",
     "    criterion,\n",
     "    batch_size,\n",
