--- a/location_sigma_spindles.ipynb
+++ b/location_sigma_spindles.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 26.3256,  27.9165,  27.8290,  ...,  20.5286,  21.0742,  20.7298],\n",
+      "        [ -8.2109,  -9.4852,  -9.3056,  ...,  -9.6107,  -9.9441,  -9.9490],\n",
+      "        [ -3.4718,  -2.2240,  -1.4831,  ...,   9.8945,   9.5982,   8.1645],\n",
+      "        ...,\n",
+      "        [  9.1788,   6.6849,   5.8792,  ...,   7.1602,   3.9604,   0.8572],\n",
+      "        [ -3.4990,  -0.5417,   3.5563,  ...,  -4.2979,  -1.4342,   0.8087],\n",
+      "        [  9.3037,  10.5672,   9.6996,  ..., -16.1384, -13.0277,  -9.0365]])\n"
+     ]
+    }
+   ],
    "source": [
     "test_marks = torch.tensor(np.load('data_sigma_spindles/test_marks.npy'))\n",
     "test_signals = torch.tensor(np.load('data_sigma_spindles/test_signals.npy'))\n",
     "train_marks = torch.tensor(np.load('data_sigma_spindles/train_marks.npy'))\n",
     "train_signals = torch.tensor(np.load('data_sigma_spindles/train_signals.npy'))\n",
     "val_marks = torch.tensor(np.load('data_sigma_spindles/val_marks.npy'))\n",
-    "val_signals = torch.tensor(np.load('data_sigma_spindles/val_signals.npy'))"
+    "val_signals = torch.tensor(np.load('data_sigma_spindles/val_signals.npy'))\n",
+    "print(test_signals)"
    ]
   },
   {
@@ -57,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.LineCollection at 0x226241821f0>"
+       "<matplotlib.collections.LineCollection at 0x22584edf160>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -103,23 +118,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class CNN_Model(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
     "        dropout_p,\n",
     "    ):\n",
     "        super().__init__()\n",
+    "        nfilter1=1\n",
+    "        nfilter2=2\n",
+    "        n_out_network=1\n",
     "        self.conv_blocks = nn.Sequential(\n",
     "\n",
-    "          \n",
-    "            nn.Conv2d(800,2,kernel_size=1,padding=\"same\"),\n",
-    "            nn.AvgPool2d(3),\n",
+    "            # nn.ConvTranspose2d(1,1,kernel_size=1,stride=1)  \n",
+    "            nn.Conv1d(in_channels=1,out_channels=nfilter1,kernel_size=1,padding=\"same\"),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv1d(in_channels=nfilter1,out_channels=nfilter2,kernel_size=1,padding=\"same\"),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool1d(2,2),\n",
     "            nn.Flatten(),\n",
+    "\n",
+    "            nn.Linear(in_features=400,out_features=n_out_network)\n",
     "        )\n",
     "\n",
     "\n",
@@ -143,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,10 +277,10 @@
     "\n",
     "    # else:\n",
     "    #     train_dataset.dataset.transform = original_transform\n",
-    "    train_dataset.dataset.transform = original_transform\n",
+    "    # train_dataset.dataset.transform = original_transform\n",
     "\n",
-    "    print(f\"Using train transform: {train_dataset.dataset.transform}\")\n",
-    "    print(f\"Using validation transform: {val_dataset.dataset.transform}\")\n",
+    "    # print(f\"Using train transform: {train_dataset.dataset.transform}\")\n",
+    "    # print(f\"Using validation transform: {val_dataset.dataset.transform}\")\n",
     "\n",
     "    if use_gpu:\n",
     "        model.cuda()\n",
@@ -345,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -383,16 +405,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 1])\n",
+      "tensor([[-0.0683],\n",
+      "        [ 0.1259]], grad_fn=<AddmmBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "lr = 5e-4\n",
-    "batch_size = 64\n",
+    "batch_size = 1\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "epochs = 30\n",
+    "epochs = 2\n",
     "\n",
     "CNN1 = CNN_Model(dropout_p=0.5)\n",
+    "print(CNN1(train_ds[0][0].unsqueeze(0)).shape)\n",
+    "print(CNN1(train_ds[0][0].unsqueeze(0)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Expected input batch_size (2) to match target batch_size (1).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-230-9c2c01862211>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m curves = train_model(\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mCNN1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mtrain_ds\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mval_ds\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mepochs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-227-40454b44a924>\u001b[0m in \u001b[0;36mtrain_model\u001b[1;34m(model, train_dataset, val_dataset, epochs, criterion, batch_size, lr, n_evaluations_per_epoch, use_gpu, data_augmentation)\u001b[0m\n\u001b[0;32m     70\u001b[0m                 \u001b[0my_batch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my_batch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m             \u001b[0my_predicted\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_step\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_batch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muse_gpu\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m             \u001b[0mcumulative_train_loss\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-226-ad9b49724b34>\u001b[0m in \u001b[0;36mtrain_step\u001b[1;34m(x_batch, y_batch, model, optimizer, criterion, use_gpu)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m# Cálculo de loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_predicted\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;31m# Actualización de parámetros\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32ma:\\Anaconda\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1128\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[0;32m   1129\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[1;32m-> 1130\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1131\u001b[0m         \u001b[1;31m# Do not call functions when jit is used\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1132\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32ma:\\Anaconda\\lib\\site-packages\\torch\\nn\\modules\\loss.py\u001b[0m in \u001b[0;36mforward\u001b[1;34m(self, input, target)\u001b[0m\n\u001b[0;32m   1162\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1163\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mTensor\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1164\u001b[1;33m         return F.cross_entropy(input, target, weight=self.weight,\n\u001b[0m\u001b[0;32m   1165\u001b[0m                                \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mignore_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1166\u001b[0m                                label_smoothing=self.label_smoothing)\n",
+      "\u001b[1;32ma:\\Anaconda\\lib\\site-packages\\torch\\nn\\functional.py\u001b[0m in \u001b[0;36mcross_entropy\u001b[1;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[0;32m   3012\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0msize_average\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mreduce\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3013\u001b[0m         \u001b[0mreduction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlegacy_get_string\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msize_average\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreduce\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3014\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcross_entropy_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel_smoothing\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3015\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3016\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Expected input batch_size (2) to match target batch_size (1)."
+     ]
+    }
+   ],
+   "source": [
     "curves = train_model(\n",
     "    CNN1,\n",
     "    train_ds,\n",
