--- a/location_sigma_spindles.ipynb
+++ b/location_sigma_spindles.ipynb
@@ -247,7 +247,7 @@
     "        data_count = x_val.shape[0]\n",
     "\n",
     "    val_acc = cumulative_predictions / data_count\n",
-    "    val_loss = cumulative_loss\n",
+    "    val_loss = cumulative_loss # Hay que dividirla por algooo quizas el len\n",
     "\n",
     "    return val_acc, val_loss"
    ]
