--- a/location_sigma_spindles.ipynb
+++ b/location_sigma_spindles.ipynb
@@ -104,77 +104,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IOU"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1405,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SMOOTH = 1e-6\n",
-    "\n",
-    "def iou_pytorch(y_predicted: torch.Tensor, y_vals: torch.Tensor,eva=False):\n",
-    "    # print(\"predicho: \",y_predicted)\n",
-    "    # print(\"real: \",y_vals)\n",
-    "    if eva==True:\n",
-    "        print(\"predicho: \",y_predicted)\n",
-    "        print(\"real: \",y_vals)\n",
-    "    largo=len(y_vals)\n",
-    "    error_array=np.zeros(largo)\n",
-    "    count=0\n",
-    "    for pred,y_val in zip(y_predicted,y_vals):\n",
-    "        pred=pred.squeeze(0)\n",
-    "        intervalo_inter = [max(pred[0],y_val[0]),min(pred[1],y_val[1])]\n",
-    "        rest = intervalo_inter[1] - intervalo_inter[0]\n",
-    "        inter = rest if rest>0 else 0\n",
-    "\n",
-    "        len_predicted = pred[1] - pred[0]\n",
-    "        len_val = y_val[1] - y_val[0]\n",
-    "        union = len_predicted + len_val - inter\n",
-    "        error_array[count]=(inter/(union+1e-6))\n",
-    "        count+=1\n",
-    "        \n",
-    "    return torch.tensor(1-np.mean(error_array),requires_grad=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1406,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([ 0.0063, -2.2236])\n",
-      "tensor([217, 402])\n",
-      "tensor([217., 402.])\n",
-      "tensor([217, 402])\n"
-     ]
-    }
-   ],
-   "source": [
-    "a=torch.tensor([[ 0.0063, -2.2236],[217, 402]])\n",
-    "b=torch.tensor([[217, 402],[217, 402]])\n",
-    "for x,y in zip(a,b):\n",
-    "    print(x)\n",
-    "    print(y)"
+    "# entrenamiento y visualización"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Función de entrenamiento y visualización"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Curvas"
+    "## Curves"
    ]
   },
   {
@@ -209,7 +146,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Eval"
+    "## IOU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1405,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SMOOTH = 1e-6\n",
+    "\n",
+    "def iou_pytorch(y_predicted: torch.Tensor, y_vals: torch.Tensor,eva=False):\n",
+    "\n",
+    "    largo=len(y_vals)\n",
+    "    error_array=np.zeros(largo)\n",
+    "    count=0\n",
+    "    for pred,y_val in zip(y_predicted,y_vals):\n",
+    "        pred=pred.squeeze(0)\n",
+    "        intervalo_inter = [max(pred[0],y_val[0]),min(pred[1],y_val[1])]\n",
+    "        rest = intervalo_inter[1] - intervalo_inter[0]\n",
+    "        inter = rest if rest>0 else 0\n",
+    "\n",
+    "        len_predicted = pred[1] - pred[0]\n",
+    "        len_val = y_val[1] - y_val[0]\n",
+    "        union = len_predicted + len_val - inter\n",
+    "        error_array[count]=(inter/(union+1e-6))\n",
+    "        count+=1\n",
+    "        \n",
+    "    return torch.tensor(1-np.mean(error_array),requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IOU 2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SMOOTH = 1e-6\n",
+    "\n",
+    "def iou_pytorch2d(y_predicted, y_vals):\n",
+    "  \n",
+    "    largo=len(y_vals)\n",
+    "    error_array=np.zeros(largo)\n",
+    "    count=0\n",
+    "\n",
+    "    y_predicted = y_predicted.unsqueeze(0)\n",
+    "    for pred,y_val in zip(y_predicted,y_vals):\n",
+    "\n",
+    "        #calculamos interseccion\n",
+    "        intervalo_inter = [max(pred[0],y_val[0]),min(pred[1],y_val[1])]\n",
+    "        rest = intervalo_inter[1] - intervalo_inter[0]\n",
+    "        inter = rest if rest>0 else 0\n",
+    "\n",
+    "        #calculamos union\n",
+    "        len_predicted = pred[1] - pred[0]\n",
+    "        len_val = y_val[1] - y_val[0]\n",
+    "        union = len_predicted + len_val - inter\n",
+    "\n",
+    "        error_array[count]=(inter/(union+SMOOTH))\n",
+    "        count+=1\n",
+    "        \n",
+    "    return torch.tensor(1-np.mean(error_array),requires_grad=True), error_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
    ]
   },
   {
@@ -233,12 +245,8 @@
     "                y = y.cuda()\n",
     "            y_pred=model(x)\n",
     "            y_pred=y_pred.reshape(2)\n",
-    "            #y_pred=y_pred.squeeze(0)\n",
-    "            #y_pred=y_pred.squeeze(0)\n",
-    "            print(y_pred.shape)\n",
-    "            print(y_pred)\n",
-    "            print(y.shape)\n",
-    "            err=criterion(y_pred,y,eva=True)\n",
+    "\n",
+    "            err=criterion(y_pred.unsqueeze(0),y.unsqueeze(0),eva=True)\n",
     "            error_list.append(err)\n",
     "            y_predicted.append(y_pred)\n",
     "            cumulative_predictions += (err<delta)\n",
@@ -256,7 +264,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Evaluation 2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta=0.1\n",
+    "def evaluate2d(val_loader, model, criterion, use_gpu):\n",
+    "    cumulative_loss = 0\n",
+    "    cumulative_predictions = 0\n",
+    "    data_count = 0\n",
+    "\n",
+    "    for x_val, y_val in val_loader:\n",
+    "        if use_gpu:\n",
+    "            x_val = x_val.cuda()\n",
+    "            y_val = y_val.cuda()\n",
+    "\n",
+    "        batch_size = len(x_val)\n",
+    "        x_val = x_val.unsqueeze(0)\n",
+    "        #x_val = torch.reshape(x_val, (batch_size, 1, 800))\n",
+    "\n",
+    "        y_predicted = model(x_val)\n",
+    "        \n",
+    "        loss, error_array = criterion(y_predicted, y_val)\n",
+    "\n",
+    "        correct_prediction = (error_array > delta).sum()\n",
+    "\n",
+    "        cumulative_predictions += correct_prediction\n",
+    "        cumulative_loss += loss.item()\n",
+    "        data_count += y_val.shape[0]\n",
+    "\n",
+    "    val_acc = cumulative_predictions / data_count\n",
+    "    val_loss = cumulative_loss / len(val_loader)\n",
+    "\n",
+    "    return val_acc, val_loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Training set up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train step "
    ]
   },
   {
@@ -288,7 +347,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## a"
+    "#### Train step 2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_step2d(x_batch, y_batch, model, optimizer, criterion, use_gpu):\n",
+    "     \n",
+    "    batch_size = len(x_batch)\n",
+    "    x_batch = x_batch.unsqueeze(0)\n",
+    "    #x_batch = torch.reshape(x_batch, (batch_size, 1, 800))\n",
+    "\n",
+    "    y_predicted = model(x_batch)\n",
+    "\n",
+    "\n",
+    "    # Cálculo de loss\n",
+    "    loss, error_array = criterion(y_predicted, y_batch)\n",
+    "\n",
+    "    # Actualización de parámetros\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    return y_predicted, loss, error_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Model"
    ]
   },
   {
@@ -309,24 +401,6 @@
     "    use_gpu=False,\n",
     "    data_augmentation=False,\n",
     "):\n",
-    "    # original_transform = torchvision.transforms.Compose([\n",
-    "    #     torchvision.transforms.ToTensor(),\n",
-    "    #     torchvision.transforms.Normalize((0.4914, 0.4822, 0.4465), (0.247, 0.243, 0.261)),\n",
-    "    # ])\n",
-    "\n",
-    "    # if data_augmentation:\n",
-    "    #     train_dataset.dataset.transform = torchvision.transforms.Compose([\n",
-    "    #         original_transform,\n",
-    "    #         torchvision.transforms.RandomHorizontalFlip(),\n",
-    "    #         torchvision.transforms.Lambda(lambda x: x + torch.randn(3, 1, 1) * 0.05)\n",
-    "    #     ])\n",
-    "\n",
-    "    # else:\n",
-    "    #     train_dataset.dataset.transform = original_transform\n",
-    "    # train_dataset.dataset.transform = original_transform\n",
-    "\n",
-    "    # print(f\"Using train transform: {train_dataset.dataset.transform}\")\n",
-    "    # print(f\"Using validation transform: {val_dataset.dataset.transform}\")\n",
     "\n",
     "    if use_gpu:\n",
     "        model.cuda()\n",
@@ -421,7 +495,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Definition"
+    "#### Train model 2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta = 0.1\n",
+    "\n",
+    "def train_model2d(\n",
+    "    model,\n",
+    "    train_dataset,\n",
+    "    val_dataset,\n",
+    "    epochs,\n",
+    "    criterion,\n",
+    "    batch_size,\n",
+    "    lr,\n",
+    "    n_evaluations_per_epoch=6,\n",
+    "    use_gpu=False,\n",
+    "    data_augmentation=False,\n",
+    "):\n",
+    "\n",
+    "    if use_gpu:\n",
+    "        model.cuda()\n",
+    "\n",
+    "    # Definición de dataloader\n",
+    "    train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=2, pin_memory=use_gpu)\n",
+    "    val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=len(val_dataset), shuffle=False, pin_memory=use_gpu)\n",
+    "\n",
+    "    # Optimizador\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "\n",
+    "    # Listas para guardar curvas de entrenamiento\n",
+    "    curves = {\n",
+    "        \"train_acc\": [],\n",
+    "        \"val_acc\": [],\n",
+    "        \"train_loss\": [],\n",
+    "        \"val_loss\": [],\n",
+    "    }\n",
+    "\n",
+    "    t0 = time.perf_counter()\n",
+    "\n",
+    "    iteration = 0\n",
+    "\n",
+    "    n_batches = len(train_loader)\n",
+    "\n",
+    "    for epoch in range(epochs):\n",
+    "        print(f\"\\rEpoch {epoch + 1}/{epochs}\")\n",
+    "        cumulative_train_loss = 0\n",
+    "        cumulative_train_corrects = 0\n",
+    "        train_loss_count = 0\n",
+    "        train_acc_count = 0\n",
+    "\n",
+    "        # Entrenamiento del modelo\n",
+    "        model.train()\n",
+    "\n",
+    "        for i, (x_batch, y_batch) in enumerate(train_loader):\n",
+    "            if use_gpu:\n",
+    "                x_batch = x_batch.cuda()\n",
+    "                y_batch = y_batch.cuda()\n",
+    "\n",
+    "            y_predicted, loss, error_array = train_step(x_batch, y_batch, model, optimizer, criterion, use_gpu)\n",
+    "\n",
+    "            cumulative_train_loss += loss.item()\n",
+    "            train_loss_count += 1\n",
+    "            train_acc_count += y_batch.shape[0]\n",
+    "\n",
+    "            # Calculamos número de aciertos\n",
+    "            correct_prediction = (error_array > delta).sum()\n",
+    "            #class_prediction = torch.argmax(y_predicted, axis=1).long()\n",
+    "            cumulative_train_corrects += correct_prediction\n",
+    "\n",
+    "            if (i % (n_batches // n_evaluations_per_epoch) == 0) and (i > 0):\n",
+    "                train_loss = cumulative_train_loss / train_loss_count\n",
+    "                train_acc = cumulative_train_corrects / train_acc_count\n",
+    "\n",
+    "                print(f\"Iteration {iteration} - Batch {i}/{len(train_loader)} - Train loss: {train_loss}, Train acc: {train_acc}\")\n",
+    "                #print(f\"Iteration {iteration} - Batch {i}/{len(train_loader)} - Train loss: {train_loss}\")\n",
+    "            iteration += 1\n",
+    "\n",
+    "\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            val_acc, val_loss = evaluate2d(val_loader, model, criterion, use_gpu)\n",
+    "\n",
+    "        print(f\"Val loss: {val_loss}, Val acc: {val_acc}\")\n",
+    "\n",
+    "        train_loss = cumulative_train_loss / train_loss_count\n",
+    "        train_acc = cumulative_train_corrects / train_acc_count\n",
+    "\n",
+    "        curves[\"train_acc\"].append(train_acc)\n",
+    "        curves[\"val_acc\"].append(val_acc)\n",
+    "        curves[\"train_loss\"].append(train_loss)\n",
+    "        curves[\"val_loss\"].append(val_loss)\n",
+    "\n",
+    "    print()\n",
+    "    print(f\"Tiempo total de entrenamiento: {time.perf_counter() - t0:.4f} [s]\")\n",
+    "\n",
+    "    model.cpu()\n",
+    "\n",
+    "    # if data_augmentation:\n",
+    "    #     train_dataset.dataset.transform = original_transform\n",
+    "\n",
+    "    return curves"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models Definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conv1dModel"
    ]
   },
   {
@@ -431,7 +624,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "class CNN_Model(nn.Module):\n",
+    "class CNN1d_Model(nn.Module):\n",
     "    eva=False\n",
     "    def __init__(\n",
     "        self,\n",
@@ -478,37 +671,74 @@
     "        )\n",
     "\n",
     "    def forward(self, x,evaa=False):\n",
-    "        if evaa==True:\n",
-    "            print(\"model: \", x.shape)\n",
     "        return self.conv_blocks(x)\n",
-    "\n",
-    "# class CNN_Model(nn.Module):\n",
-    "#     def __init__(\n",
-    "#         self,\n",
-    "#         dropout_p,\n",
-    "#     ):\n",
-    "#         super().__init__()\n",
-    "#         nfilter1=1\n",
-    "#         nfilter2=2\n",
-    "#         n_out_network=2\n",
-    "#         self.conv_blocks = nn.Sequential(\n",
-    "\n",
-    "#             # nn.ConvTranspose2d(1,1,kernel_size=1,stride=1)  \n",
-    "#             nn.Conv1d(in_channels=1,out_channels=nfilter1,kernel_size=1,padding=\"same\"),\n",
-    "#             nn.ReLU(),\n",
-    "            \n",
-    "#             nn.Conv1d(in_channels=nfilter1,out_channels=nfilter2,kernel_size=1,padding=\"same\"),\n",
-    "#             nn.ReLU(),\n",
-    "#             nn.Flatten(),\n",
-    "            \n",
-    "#             nn.Linear(in_features=1600,out_features=n_out_network),\n",
-    "#         )\n",
-    "\n",
-    "\n",
-    "#     def forward(self, x):\n",
-    "#         x=x.unsqueeze(0).unsqueeze(0)\n",
-    "#         return self.conv_blocks(x)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conv2d Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C=1\n",
+    "class CNN2d_Model(nn.Module):\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        dropout_p\n",
+    "    ):\n",
+    "        \n",
+    "        super().__init__()\n",
+    "        self.spatial_filtering = nn.Sequential(\n",
+    "            nn.Conv2d(1, C, kernel_size=(C, 1), stride=1),\n",
+    "        )\n",
+    "\n",
+    "        self.conv_blocks = nn.Sequential(\n",
+    "            \n",
+    "            nn.Conv2d(1, 4, kernel_size=(1,3), stride=1, padding=\"same\"),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d((1,2)),\n",
+    "\n",
+    "            nn.Conv2d(4, 8, kernel_size=(1,3), stride=1, padding=\"same\"),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d((1,2)),\n",
+    "\n",
+    "            nn.Conv2d(8, 16,kernel_size=(1,3), stride = 1, padding=\"same\"),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d((1,2)),\n",
+    "\n",
+    "            nn.Conv2d(16,32,kernel_size=(1,3), stride = 1, padding=\"same\"),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d((1,2)),\n",
+    "\n",
+    "            nn.Conv2d(32,64,kernel_size=(1,3), stride = 1, padding=\"same\"),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d((1,2)),\n",
+    "\n",
+    "        )\n",
+    "\n",
+    "        self.localization = nn.Sequential(\n",
+    "           \n",
+    "            nn.Conv2d(64, 2, kernel_size=(1, 25)),\n",
+    "\n",
+    "        )\n",
+    "\n",
+    "    def forward(self,x):\n",
+    "        x = self.spatial_filtering(x)\n",
+    "        #x = torch.transpose(x, 0, 1)\n",
+    "        x = self.conv_blocks(x)\n",
+    "        x = self.localization(x)\n",
+    "        x = torch.mean(x, dim=1)\n",
+    "        x = x.reshape(2)\n",
+    "        return x"
    ]
   },
   {
@@ -527,9 +757,8 @@
     "lr = 5e-4\n",
     "batch_size = 2\n",
     "criterion = iou_pytorch\n",
-    "epochs = 1\n",
-    "\n",
-    "CNN1 = CNN_Model(dropout_p=0.5)"
+    "criterion2d= iou_pytorch2d\n",
+    "epochs = 20"
    ]
   },
   {
@@ -570,12 +799,34 @@
     }
    ],
    "source": [
+    "CNN1d = CNN1d_Model(dropout_p=0.5)\n",
     "curves = train_model(\n",
-    "    CNN1,\n",
+    "    CNN1d,\n",
     "    train_ds,\n",
     "    val_ds,\n",
     "    epochs,\n",
     "    criterion,\n",
+    "    batch_size,\n",
+    "    lr,\n",
+    "    use_gpu=False,\n",
+    "    data_augmentation=False,\n",
+    ")\n",
+    "show_curves(curves)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CNN2d = CNN2d_Model(dropout_p=0.5)\n",
+    "curves = train_model(\n",
+    "    CNN2d,\n",
+    "    train_ds,\n",
+    "    val_ds,\n",
+    "    epochs,\n",
+    "    criterion2d,\n",
     "    batch_size,\n",
     "    lr,\n",
     "    use_gpu=False,\n",
